Tests/RunCMake/CMakePresets/InvalidPresetVendor-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidPresetVendor:
Error: @8,17: Invalid preset
      "vendor": true
                \^$
